more edits, EBMA pres fixed

--- a/APSA_2012/Paper/Bibliography_EBMA.bib
+++ b/APSA_2012/Paper/Bibliography_EBMA.bib
@@ -2,12 +2,161 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Florian Hollenbach at 2013-01-29 11:25:08 -0500 
+%% Created for Florian Hollenbach at 2013-01-29 14:28:34 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Lockerbie:2012,
+	Author = {Lockerbie, Brad},
+	Date-Added = {2013-01-29 19:26:08 +0000},
+	Date-Modified = {2013-01-29 19:26:56 +0000},
+	Journal = {PS: Political Science \& Politics},
+	Number = {4},
+	Pages = {644--647},
+	Title = {Economic Expectations and Election Outcomes: The Presidency and the House in 2012},
+	Volume = {45},
+	Year = {2012}}
+
+@article{Cuzan:2012,
+	Author = {Cuz\`an, Alfred G.},
+	Date-Added = {2013-01-29 19:23:51 +0000},
+	Date-Modified = {2013-01-29 19:24:24 +0000},
+	Journal = {PS: Political Science \& Politics},
+	Number = {4},
+	Pages = {648--650},
+	Title = {Forecasting the 2012 Presidential Election with the Fiscal Model},
+	Volume = {45},
+	Year = {2012}}
+
+@article{Holbrook:2012,
+	Author = {Holbrook, Thomas M.},
+	Date-Added = {2013-01-29 19:23:05 +0000},
+	Date-Modified = {2013-01-29 19:23:34 +0000},
+	Journal = {PS: Political Science \& Politics},
+	Number = {4},
+	Pages = {640--643},
+	Title = {Incumbency, National Conditions, and the 2012 Presidential Election},
+	Volume = {45},
+	Year = {2012}}
+
+@article{Hibbs:2012a,
+	Author = {Hibbs, Douglas A.},
+	Date-Added = {2013-01-29 19:21:59 +0000},
+	Date-Modified = {2013-01-29 19:22:34 +0000},
+	Journal = {PS: Political Science \& Politics},
+	Number = {4},
+	Pages = {635--639},
+	Title = {Obama's Reelection Prospects under ``Bread and Peace'' Voting in the 2012 US Presidential Election},
+	Volume = {45},
+	Year = {2012}}
+
+@article{EriksonWlezien:2012,
+	Author = {Erikson, Robert S. and Wlezien, Christopher},
+	Date-Added = {2013-01-29 19:20:20 +0000},
+	Date-Modified = {2013-01-29 19:20:55 +0000},
+	Journal = {PS: Political Science \& Politics},
+	Number = {4},
+	Pages = {620-624},
+	Title = {The Objective and Subjective Economy and the Presidential Vote},
+	Volume = {45},
+	Year = {2012}}
+
+@article{LewisBeckTien:2012,
+	Author = {Lewis-Beck, Michael S. and Tien, Charles},
+	Date-Added = {2013-01-29 19:19:00 +0000},
+	Date-Modified = {2013-01-29 19:19:32 +0000},
+	Journal = {PS: Political Science \& Politics},
+	Number = {4},
+	Pages = {625--629},
+	Title = {Election Forecasting for Turbulent Times},
+	Volume = {45},
+	Year = {2012}}
+
+@article{Abramowitz:2012,
+	Author = {Abramowitz, Alan I.},
+	Date-Added = {2013-01-29 19:17:27 +0000},
+	Date-Modified = {2013-01-29 19:18:03 +0000},
+	Journal = {PS: Political Science \& Politics},
+	Number = {4},
+	Pages = {618--619},
+	Title = {Forecasting in a Polarized Era: The Time for Change Model and the 2012 Presidential Election},
+	Volume = {45},
+	Year = {2012}}
+
+@article{Campbell:2012,
+	Author = {Campbell, James E.},
+	Date-Added = {2013-01-29 19:15:25 +0000},
+	Date-Modified = {2013-01-29 19:16:58 +0000},
+	Journal = {PS: Political Science \& Politics},
+	Number = {4},
+	Pages = {630-634},
+	Title = {Forecasting the Presidential and Congressional Elections of 2012: The Trial-Heat and the Seats-in-Trouble Models},
+	Volume = {45},
+	Year = {2012}}
+
+@incollection{WlezienErikson:2000,
+	Address = {Thousand Oaks},
+	Author = {Wlezien, Christopher and Erikson, Robert S.},
+	Booktitle = {Before the Vote: {F}orecasting American National Elections},
+	Chapter = {5},
+	Date-Added = {2013-01-29 18:17:55 +0000},
+	Date-Modified = {2013-01-29 18:18:57 +0000},
+	Editor = {Campbell, James E. and Garand, James C.},
+	Pages = {103--118},
+	Publisher = {Sage Publications},
+	Title = {Temporal Horizons and Presidential Election Forecasts},
+	Year = {2000}}
+
+@incollection{LewisBeckTien:2000,
+	Address = {Thousand Oaks},
+	Author = {Lewis-Beck, Michael S. and Tien, Charles},
+	Booktitle = {Before the Vote: {F}orecasting American National Elections},
+	Chapter = {4},
+	Date-Added = {2013-01-29 18:15:14 +0000},
+	Date-Modified = {2013-01-29 18:17:38 +0000},
+	Editor = {Campbell, James E. and Garand, James C.},
+	Pages = {83--102},
+	Publisher = {Sage Publications},
+	Title = {The Future in Forecasting : Prospective Presidential Models},
+	Year = {2000}}
+
+@incollection{Abramowitz:2000,
+	Address = {Thousand Oaks},
+	Author = {Abramowitz, Alan I.},
+	Booktitle = {Before the Vote: {F}orecasting American National Elections},
+	Chapter = {2},
+	Date-Added = {2013-01-29 18:13:16 +0000},
+	Date-Modified = {2013-01-29 18:14:25 +0000},
+	Editor = {Campbell, James E. and Garand, James C.},
+	Pages = {47--56},
+	Publisher = {Sage Publications},
+	Title = {Bill and Al's Excellent Adventure: Forecasting the 1996 Presidential Election},
+	Year = {2000}}
+
+@incollection{Campbell:2000,
+	Address = {Thousand Oaks},
+	Author = {Campbell, James E.},
+	Booktitle = {Before the Vote: {F}orecasting American National Elections},
+	Chapter = {1},
+	Date-Added = {2013-01-29 18:11:19 +0000},
+	Date-Modified = {2013-01-29 18:13:01 +0000},
+	Editor = {Campbell, James E. and Garand, James C.},
+	Pages = {17--46},
+	Publisher = {Sage Publications},
+	Title = {Polls and Votes: {T}he Trial-Heat Presidential Election Forecasting Model, Certainty, and Political Campaigns},
+	Year = {2000}}
+
+@book{CampbellGarand:2000,
+	Address = {Thousand Oaks},
+	Author = {Campbell, James E. and Garand, James C.},
+	Date-Added = {2013-01-29 18:09:08 +0000},
+	Date-Modified = {2013-01-29 18:10:39 +0000},
+	Publisher = {Sage Publications},
+	Title = {Before the Vote: {F}orecasting American National Elections},
+	Year = {2000}}
 
 @article{Holbrook:1996,
 	Author = {Holbrook, Thomas M.},
@@ -23,9 +172,10 @@
 @unpublished{Fair:2012,
 	Author = {Fair, Ray C.},
 	Date-Added = {2013-01-28 02:58:27 +0000},
-	Date-Modified = {2013-01-28 02:59:37 +0000},
+	Date-Modified = {2013-01-29 19:28:34 +0000},
 	Note = {\url{http://fairmodel.econ.yale.edu/} (accessed january 27, 2013)},
-	Title = {Personal Website}}
+	Title = {Personal Website},
+	Year = {2012}}
 
 @article{Campbell:2008a,
 	Author = {Campbell, James E.},
