--- a/APSA_2012/Paper/APSA_Paper_2012.tex
+++ b/APSA_2012/Paper/APSA_Paper_2012.tex
@@ -926,34 +926,42 @@ elections in this dataset.\footnote{The predictions by Cuz\`an for
 \caption{Pre-election forecasts of the percent of the two-party vote going to the incumbent party in U.S. Presidential elections}
 \label{tab:one}
 \footnotesize
+% latex table generated in R 2.15.2 by xtable 1.7-0 package
+% Tue Jan 29 13:42:53 2013
 \begin{center}
-\begin{tabular}{rlrrrrrrrrr}
+\begin{tabular}{rrrrrrrrrrrr}
   \toprule
-  & F & A & C & H & LBRT & L & Hol & EW & Cuz \\ 
+ & Year & F & A & C & H & LBRT & L & Hol & EW & Cuz  \\ 
   \midrule
-  1992 & 55.7 & 46.3 & 49.7 & 48.9 & 47.3 &  &  &  &  \\ 
-  1996 & 49.5 & 57.0 & 55.5 & 53.5 & 53.3 &  & 57.2 & 55.6 &  \\ 
-  2000 & 50.8 & 53.2 & 52.8 & 53.8 & 55.4 & 60.3 & 60.3 & 55.2 &  \\ 
-  2004 & 57.5 & 53.7 & 52.8 & 53.2 & 49.9 & 57.6 & 55.8 & 52.9 & 51.1 \\ 
-  2008 & 48.1 & 45.7 & 52.7 & 48.5 & 43.4 & 41.8 & 44.3 & 47.8 & 48.1 \\ 
-  \bottomrule
-
+1 & 1992 & 55.70 & 46.30 & 47.10 & 48.90 &  &  &  &  &   \\ 
+  2 & 1996 & 49.50 & 56.80 & 58.10 & 53.50 & 54.80 &  & 57.20 & 57.20 &   \\ 
+  3 & 2000 & 50.80 & 53.20 & 52.80 & 53.80 & 55.40 & 60.30 & 60.30 & 55.20 &   \\ 
+  4 & 2004 & 57.50 & 53.70 & 53.80 & 53.20 & 49.90 & 57.60 & 54.50 & 52.30 & 52.80  \\ 
+  5 & 2008 & 48.10 & 45.70 & 52.70 & 48.20 & 49.90 & 41.80 & 44.30 & 47.80 & 48.00  \\ 
+   \bottomrule
+%\begin{center}
+%\begin{tabular}{rlrrrrrrrrr}
+%  \toprule
+%  & F & A & C & H & LBRT & L & Hol & EW & Cuz \\ 
+%  \midrule
+%  1992 & 55.7 & 46.3 & 49.7 & 48.9 & 47.3 &  &  &  &  \\ 
+%  1996 & 49.5 & 57.0 & 55.5 & 53.5 & 53.3 &  & 57.2 & 55.6 &  \\ 
+%  2000 & 50.8 & 53.2 & 52.8 & 53.8 & 55.4 & 60.3 & 60.3 & 55.2 &  \\ 
+%  2004 & 57.5 & 53.7 & 52.8 & 53.2 & 49.9 & 57.6 & 55.8 & 52.9 & 51.1 \\ 
+%  2008 & 48.1 & 45.7 & 52.7 & 48.5 & 43.4 & 41.8 & 44.3 & 47.8 & 48.1 \\ 
+%  \bottomrule
+%
 \end{tabular}
 \end{center}
-Forecasts were published prior to each election by \textbf{F}air, \textbf{A}bramowitz, \textbf{C}ampbell, \textbf{H}ibbs, \textbf{L}ewis-\textbf{B}eck and \textbf{R}ice (1992), Lewis-Beck and \textbf{T}ien  (1996-2008),   \textbf{L}ockerbie, \textbf{Hol}brook, \textbf{E}rikson and \textbf{W}lezien and \textbf{Cuz}\`an and Bundrick.  Data were taken from the collation presented at \url{http://fivethirtyeight.blogs.nytimes.com/2012/03/26/models-based-on-fundamentals-have-failed-at-predicting-presidential-elections/}. FH: VERIFIED OR FIXED NUMBERS IN R BUT NEED TO RERUN ANALYSIS AND CHANGE TABLE, STILL TRYINT TO FIND 1992 NUMBERS
+Forecasts were published prior to each election by \textbf{F}air, \textbf{A}bramowitz, \textbf{C}ampbell, \textbf{H}ibbs, \textbf{L}ewis-\textbf{B}eck and \textbf{R}ice (1992), Lewis-Beck and \textbf{T}ien  (1996-2008),   \textbf{L}ockerbie, \textbf{Hol}brook, \textbf{E}rikson and \textbf{W}lezien and \textbf{Cuz}\`an and Bundrick. 
 \end{table}
 
 
-Using the forecasts shown in Table 1,\footnote{The out-of-sample predictions for these models were collected from the individual journal articles, personal websites and symposia introductions. When multiple forecasts were made we used the authors' preferred forecast, or took the mean if no preference was given \citep{Hibbs:1992,Hibbs:2000,Campbell:2001,Hibbs:2004,Campbell:2004,Campbell:2005,LewisBeckTien:1996,EriksonWlezien:1996,Campbell:2008a,Fair:2012}.} we fit an EBMA model with
-$c=0.05$.  The model weights and in-sample fit statistics for the
-ensemble and its components are shown in Table~\ref{presModel}.  As
-can be seen, the EBMA model assigns the majority of weight to the
-Abramowitz model with the model by Campbell receiving the second
-largest weight. These weights are based on the performance of each
-model in forecasting the incumbent vote share in the presidential
-elections between 1992 and 2008. The Cuz\`an and Bundrick model is
-weighted to such a small degree because only out-of-sample predictions
-for 2004 and 2008 were available here.
+Using the forecasts shown in Table 1,\footnote{The out-of-sample predictions for these models were collected from the individual journal articles, personal websites and symposia introductions. When multiple forecasts were made we used the authors' preferred forecast, or took the mean if no preference was given \citep{Hibbs:1992,Holbrook:1996,LewisBeckTien:1996,EriksonWlezien:1996,Abramowitz:2000,Hibbs:2000,CampbellGarand:2000,Campbell:2000,Campbell:2001,Hibbs:2004,Campbell:2004,Campbell:2005,Campbell:2008a,Abramowitz:2012,Campbell:2012,Cuzan:2012,EriksonWlezien:2012,Fair:2012,Hibbs:2012a,Holbrook:2012,LewisBeckTien:2012,Lockerbie:2012}.} we fit an EBMA model with
+$c=0.05$.  The model weights and in-sample fit statistics for the ensemble and its components are shown in Table~\ref{presModel}.  As
+can be seen, the EBMA model assigns the majority of weight to the Abramowitz model with the model by Hibbs receiving the second largest weight. These weights are based on the performance of each
+model in forecasting the incumbent vote share in the presidential elections between 1992 and 2008. The Cuz\`an and Bundrick model is
+weighted to such a small degree because only out-of-sample predictions for 2004 and 2008 were available here.
 
 
 % latex table generated in R 2.15.1 by xtable 1.7-0 package
@@ -966,16 +974,27 @@ for 2004 and 2008 were available here.
   \toprule
  & \shortstack{EBMA\\ Weight}&RMSE &MAE \\ 
   \midrule
-EBMA &  & 1.92 & 1.56 \\ 
+  EBMA &  & 1.92 & 1.49 \\ 
   Fair & 0.02 & 5.53 & 4.58 \\ 
-  Abramowitz & 0.78 & 2.02 & 1.72 \\ 
-  Campbell  & 0.07 & 3.46 & 2.88 \\ 
-  Hibbs  & 0.04 & 2.68 & 2.44 \\ 
-  Lewis-Beck, Rice, and Tien & 0.06 & 2.78 & 2.28 \\ 
-  Lockerbie  & 0.00 & 7.33 & 6.97 \\ 
- Holbrook & 0.01 & 5.73 & 4.77 \\ 
-  Erikson and Wlezien & 0.02 & 2.74 & 2.25 \\ 
-  Cuz\`an & 0.00 & 1.27 & 0.95 \\ 
+  Abramowitz & 0.80 & 1.98 & 1.68 \\ 
+  Campbell & 0.02 & 3.63 & 3.08 \\ 
+  Hibbs & 0.06 & 2.31 & 2.18 \\ 
+  Lewis-Beck, Rice, and Tien  & 0.06 & 2.87 & 2.16 \\ 
+  Lockerbie & 0.00 & 7.33 & 6.97 \\ 
+  Holbrook & 0.01 & 5.50 & 4.45 \\ 
+  Erikson and Wlezien  & 0.02 & 2.90 & 2.50 \\ 
+  Cuz\`an	 & 0.00 & 1.65 & 1.65 \\ 
+  
+%EBMA &  & 1.92 & 1.56 \\ 
+%  Fair & 0.02 & 5.53 & 4.58 \\ 
+%  Abramowitz & 0.78 & 2.02 & 1.72 \\ 
+%  Campbell  & 0.07 & 3.46 & 2.88 \\ 
+%  Hibbs  & 0.04 & 2.68 & 2.44 \\ 
+%  Lewis-Beck, Rice, and Tien & 0.06 & 2.78 & 2.28 \\ 
+%  Lockerbie  & 0.00 & 7.33 & 6.97 \\ 
+% Holbrook & 0.01 & 5.73 & 4.77 \\ 
+%  Erikson and Wlezien & 0.02 & 2.74 & 2.25 \\ 
+%  Cuz\`an & 0.00 & 1.27 & 0.95 \\ 
    \bottomrule
 \end{tabular}
 \end{center}
@@ -987,9 +1006,7 @@ Figure~\ref{pres} shows the posterior predictive distribution for the
 component models, the 2012 election.  Component models
 predictive distributions are shown in color (scaled by their
 respective weight), while the EBMA predictive distribution is shown in
-black. Vertical dashes indicate the point prediction of each model
-(bold dash for the EBMA model). The vertical dashed line in the top
-panel depicts the actual election result in 2008.
+black, the bold dash displays the point prediction for the EBMA model. The vertical dashed line depicts the actual election results in 2008 and 2012.
 
 \begin{figure}[h]
 \caption{Predictive ensemble PDFs of incumbent-part vote share in U.S. Presidential Elections}
@@ -998,19 +1015,14 @@ panel depicts the actual election result in 2008.
 \includegraphics[scale=.8]{presForecast}
 \end{center}
 The figure shows the density functions for each of the component
-models in different colors and scaled by their respective weight. The
-point predictions of the individual models are depicted by smalls
-vertical dashes. The black curve is the density of the EBMA
+models in different colors and scaled by their respective weight. The black curve is the density of the EBMA
 prediction, with the bold dash indicating the EBMA point
-prediction. For 2008 the vertical dashed line shows the actual result.
+prediction. The vertical dashed lines show the actual result of the 2008 and 2012 elections.
 \end{figure}
 
+Based on the models included as components and the calibrated weights the EBMA model prediction for 2012 was 50.3 of the two party vote share for Obama, a reasonably large absolute error of 1.7. However, we believe it is important to note that this is not unexpected as the superiority of EBMA predictions should not be judged based on one individual forecast. Indeed, the EBMA prediction performs better than the majority of forecasts for the 2012 election, but the forecast by \citet{Campbell:2012} was almost perfect. In the EBMA model a large part of the weight was associated with the \citet{Abramowitz:2012} model and the EBMA prediction was influenced by multiple models predicting a Romney victory, especially the predictions by \citet{Hibbs:2012a} and \citet{LewisBeckTien:2012}. 
 
-FLORIAN: WE NEED TO UPDATE THIS TO SHOW THE ACTUAL RESULTS.  TRY TO
-ADD A DISCUSSION HERE OF HOW GOOD THE METHOD IS.  I SUPPOSE WE SHOULD
-RUN THE REGULAR EBMA WITHOUT C AND SEE HOW WE DO IN COMPARISON.  TRY
-AND PUT SOME LIPSTICK ON THAT PIG, AND THEN WE'LL SEE WHERE WE ARE AT.
-
+For comparison, we also calibrated the EBMA prediction model for the 2012 election with $c=0$, i.e. no ``widow of crowds" parameter. While the differences in weights are relatively small, the EBMA prediction for 2012 with $c=0$ would have been equal to $49.03$, considerably worse. In addition, the simple arithmetic average of all models' predictions would have been 49.9. EBMA with a ``wisdom of crowds'' parameter of $0.05$ did considerably better than both. In essence, while we believe EBMA and predictions should be evaluated on more than one observation, this example again signifies the utility of EBMA in forecasting tasks and the ``wisdom of crowds'' parameter when calibration periods are particularly short. 
 
 
 \section{Discussion} 
