--- a/APSA_2012/Paper/APSA_Paper_2012.tex
+++ b/APSA_2012/Paper/APSA_Paper_2012.tex
@@ -1022,7 +1022,25 @@ prediction. The vertical dashed lines show the actual result of the 2008 and 201
 
 Based on the models included as components and the calibrated weights the EBMA model prediction for 2012 was 50.3 of the two party vote share for Obama, a reasonably large absolute error of 1.7. However, we believe it is important to note that this is not unexpected as the superiority of EBMA predictions should not be judged based on one individual forecast. Indeed, the EBMA prediction performs better than the majority of forecasts for the 2012 election, but the forecast by \citet{Campbell:2012} was almost perfect. In the EBMA model a large part of the weight was associated with the \citet{Abramowitz:2012} model and the EBMA prediction was influenced by multiple models predicting a Romney victory, especially the predictions by \citet{Hibbs:2012a} and \citet{LewisBeckTien:2012}. 
 
-For comparison, we also calibrated the EBMA prediction model for the 2012 election with $c=0$, i.e. no ``widow of crowds" parameter. While the differences in weights are relatively small, the EBMA prediction for 2012 with $c=0$ would have been equal to $49.03$, considerably worse. In addition, the simple arithmetic average of all models' predictions would have been 49.9. EBMA with a ``wisdom of crowds'' parameter of $0.05$ did considerably better than both. In essence, while we believe EBMA and predictions should be evaluated on more than one observation, this example again signifies the utility of EBMA in forecasting tasks and the ``wisdom of crowds'' parameter when calibration periods are particularly short. 
+% latex table generated in R 2.15.2 by xtable 1.7-0 package
+% Tue Jan 29 15:05:47 2013
+\begin{table}[ht]
+\caption{Comparing Model Results for U.S. Presidential Elections 2012}
+\label{presModel12}
+\begin{center}
+\begin{tabular}{rrrrrr}
+  \toprule
+ & Mean & Median & c=0 & c=0.05 & c=0.1 \\ 
+  \midrule
+2012 prediction & 49.9 & 49.5 & 49 & 50.3 & 50.1 \\ 
+  Absolute Error & 2 & 2.4 & 2.9 & 1.6 & 1.8 \\ 
+   \bottomrule
+\end{tabular}
+\end{center}
+\end{table}
+
+
+For comparison, we also calibrated the EBMA prediction model for the 2012 election with $c=0$, i.e. no ``widow of crowds" parameter and $c=0.1$. While the differences in weights are relatively small, the EBMA prediction for 2012 with $c=0$ would have been equal to $49$ \% and with $c=0.1$ the prediction would have been 50.1\%, both considerably worse. In addition, the simple arithmetic average of all models' predictions would have been 49.9\% and the median prediction was 49.5\%. The results of this comparison as well as the absolute error for each model are displayed in Table \ref{presModel12}. EBMA with a ``wisdom of crowds'' parameter of $0.05$ did considerably better than both. In essence, while we believe EBMA and predictions should be evaluated on more than one observation, this example again signifies the utility of EBMA in forecasting tasks and the ``wisdom of crowds'' parameter when calibration periods are particularly short. 
 
 
 \section{Discussion} 
